src/test/deca/context/invalid/provided/class3.java
class A extends B{
    int x=5;
}